encountered the arithmetic failure again and another cas uima exception. little refactoring and private runPipeline method declaration